Adding a status description.
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/fr/modules/serials/serials-collection.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/fr/modules/serials/serials-collection.tmpl
@@ -219,6 +219,7 @@ function popup(subscriptionid) {
                     <!-- TMPL_IF Name="status2" -->Arrivé<!-- /TMPL_IF -->
                     <!-- TMPL_IF Name="status3" -->En retard<!-- /TMPL_IF -->
                     <!-- TMPL_IF Name="status4" -->Manquant<!-- /TMPL_IF -->
+                    <!-- TMPL_IF Name="status5" -->Indisponible<!-- /TMPL_IF -->
                     <!-- TMPL_IF Name="status7" -->Réclamé<!-- /TMPL_IF -->
                 </td>
                 <td>
