IMPROVEMENT : reintroducing stopwords management
Zebra (and NoZebra) doesn't deal with stopwords.
It search the exact string the user types.
This commit :
- reintroduces stopword management script that was in 2.2
- add stopword management to Zebra & NoZebra searches.

PS : fortunatly, the stopwords table was not removed by updatedatabase, so nothing to do here.
(& the table is in kohastructure.sql)

Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/admin-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/admin-home.tmpl
@@ -94,6 +94,10 @@
 <th colspan="2">Additional parameters</th>
 </tr>
 <tr>
+	<td><a href="/cgi-bin/koha/admin/stopwords.pl">Stopwords</a></td>
+	<td>Words ignored during search</td>
+</tr>
+<tr>
 	<td><a href="/cgi-bin/koha/admin/printers.pl">Printers</a></td>
 	<td>Printers (UNIX paths).</td>
 </tr>
